--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
